--- a/_pages/draft.html
+++ b/_pages/draft.html
@@ -1,23 +1,8 @@
 ---
 layout: post
-title: The Privilege of Being Ordinary
+title: Draft
 permalink: /draft
-description: The Privilege of Being Ordinary
+description: Draft
 ---
 
-<p>It took me more than a month after its release before I started watching Heartstopper because I knew it wasn’t going to be light entertainment. In fact, after finally seeing myself represented on screen, I hadn’t quite considered that when this piece of art imitated our complicated lives, it would closely resemble the simple tragedy of being born different.</p>
-
-<p>I’ve had conversations with (mostly straight) friends who found the show adorable and heartwarming, as it was probably intended to be. But for the rest of us and for me who carry a very specific trauma, its sweetness is overpowered by its narrative of bitter consequence for those who didn’t find refuge in a story insulated from reality and instead found an accurate reproduction of their ongoing struggles.</p>
-
-<p>Most people who have only known me in the last several years have been spared my toughness that developed after I stood up to my bullies and only met the person I’ve become when the bullies stopped coming for me. Someone said that no one really knows the violence it took to become this gentle, for in the process of finding myself and searching for meaning behind my scars, all I found was empathy from my own encounters with oppression.</p>
-
-<p>There is a particularly isolating pain in being bullied for being gay, a lonely experience that straight people can’t quite comprehend, much less identify with. This pain is a reminder that our history is different from yours. Our history is marred by our struggles with the truth of our identities and our own version of the original sin. Many experiences are universal, much like, sadly, bullying, but the specificity of persecution for a part of you that you can’t change leads one to question the very morality of our existence. Was it wrong for me to have ever been born? I have yet to meet a person who celebrated upon the all-consuming awareness of their homosexuality. There is no joy in this discovery, only the realization that life will soon become more difficult. It is no coincidence that the coming out process is similar to going through the five stages of grief — we grieve over the easier life we lost and the harder life we were given in exchange.</p>
-
-<p>Heartstopper for many of you may have been a romantic coming-of-age story about two young boys in love and I would agree for the most part. But that story, and plenty of others like it, is also a rehashing of my people’s trauma, that their love didn’t come so easily or freely, arrested by stigma from others and fear for ourselves. In many of these stories, we sometimes wish our lives were simple and ordinary, without carrying the burden of being different.</p>
-
-<p>The formation of our relationships is always paced slower, always a step behind, connections held back by social norms, a history of shame and an environment shaped by oppressive structures. When we date in public, if we ever reach that stage at all, we habitually consider the space around us. If we stare too long at each other, will other people pose a threat? If we hold hands, will we be safe? Some of the little things that heterosexual relationships have taken for granted are often the ones we tread very carefully with, having no real sense of what is considered “normal.” This is even truer for those who remain in the closet or those who are out conditionally or those who, despite being open, are surrounded by conservative persuasion.</p>
-
-<p>The perspective of straight people when they watch LGBT-themed shows comes from a place of profound privilege. To be able to turn off the TV when the show is done is like being able to shed off a costume when the performance is over, much like straight people can leave the show’s gay conflict behind and never have to experience it for themselves. An on/off switch for when to care about queer issues is a tremendous liberty, to never have to wear it wherever you go or hear it when you speak or go to sleep and dream it. We have no personal autonomy for when to interest ourselves in these affairs and when to be unaffected by them, for everywhere we go, there is a reminder that no matter the greatness of our success or the triumph of our labor, we go home at the end of the day and still have less in the eyes of a heteronormative society and we are still not your equal.</p>
-
-<p>So as we celebrate Pride, embrace the privilege of an ordinary life where you’re free to love, without fear nor shame nor tortured hesitation. Fight for us, but more important, fight with us. Remember where your freedom comes from and think of the farthest place it can take you. All we hope is, someday, we can go there too.
-</p>
+<p>No draft available.</p>
