Updates: bottombar, larger navbar, socials

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ I&nbsp;write and design stuff.</h1>
 
 <hr />
 
+<h2>I built this site from scratch with my bare hands,<br />
+so if it breaks, that's on you.</h2>
+
 
 <div class="blog-index">
   <div class="latest">Latest Post</div>
@@ -19,6 +22,14 @@ I&nbsp;write and design stuff.</h1>
   </div>
 
 </div>
+
+<h3>FOLLOW ME</h3>
+
+<p>
+<a href="https://instagram.com/freeingfrancis"><img src="/assets/social/instagram.svg"></a>
+
+<a href="https://twitter.com/freeingfrancis"><img src="/assets/social/twitter.svg"></a>
+</p>
 
 
 <div class="home-gap">Message me if you see this. ;)
