--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ I&nbsp;write and design stuff.</h1>
 
 <hr />
 
-<h2>I built this site from scratch with my bare hands,<br />
-so if it breaks, that's on you.</h2>
+<h2>I built this site from scratch with&nbsp;my&nbsp;bare&nbsp;hands,
+so&nbsp;if&nbsp;it&nbsp;breaks, that's on you.</h2>
 
 
 <div class="blog-index">
