Update to landing page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ I&nbsp;write and design stuff.</h1>
 <hr />
 
 <h2>I built this site from scratch with&nbsp;my&nbsp;bare&nbsp;hands,
-so&nbsp;if&nbsp;it&nbsp;breaks, that's on you.</h2>
+so&nbsp;if&nbsp;it&nbsp;breaks, that's&nbsp;on&nbsp;you.</h2>
 
 
 <div class="blog-index">
