--- a/_pages/404.html
+++ b/_pages/404.html
@@ -12,4 +12,4 @@ permalink: /404
 <br /><br />
 <h2>Either way, you're here now. (But ain't it wonderful to be so blissfully lost in a foreign place, no?)</h2>
 
-<p><a href="javascript:history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i>&emsp;Go back to where you came from</a></p>
+<p><a href="javascript:history.back()"><i class="fa-solid fa-arrow-left-long"></i>&emsp;Go back to where you came from</a></p>
