--- a/_pages/work.html
+++ b/_pages/work.html
@@ -9,7 +9,7 @@ description: Hello. My name is Francis and Francis means freedom.
 <h2>It might take awhile.</h2>
 
 
-<p><a href="javascript:history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i>&emsp;Go back to where you came from</a></p>
+<p><a href="javascript:history.back()"><i class="fa-solid fa-arrow-left-long"></i>&emsp;Go back to where you came from</a></p>
 
 
 <div class="home-gap">Message<br />me<br />if<br />you<br />see<br />this. ;)
