--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@ so&nbsp;if&nbsp;it&nbsp;breaks, that&#39;s&nbsp;on&nbsp;you. &#128539;</h2>
 
 <h3>FOLLOW ME</h3>
 
-<p>
-<a href="https://instagram.com/freeingfrancis"><img src="/assets/social/instagram.svg"></a>
-
-<a href="https://twitter.com/freeingfrancis"><img src="/assets/social/twitter.svg"></a>
+<p class="social">
+<a href="https://instagram.com/freeingfrancis"><i class="fa-brands fa-instagram"></i></a>
+<a href="https://twitter.com/freeingfrancis"><i class="fa-brands fa-twitter"></i></a>
 </p>
 
 
