--- a/_pages/license.html
+++ b/_pages/license.html
@@ -45,7 +45,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 <p>All images on this site, in whatever format, are taken by me unless otherwise stated, in which case the original creator or creators are properly attributed, referenced and/or linked, unless the content is derived from the public domain, is shared under a Creative Commons Zero License, or is provided with express permission for use without attribution.</p>
 
 
-<p><a href="https://creativecommons.org/licenses/by/4.0/legalcode" target="_blank">View the legal code of the CC Attribution 4.0 International License&nbsp;&rsaquo;</a></p>
+<p><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="pop" target="_blank">View the legal code of the CC Attribution 4.0 International License&nbsp;&rsaquo;</a></p>
 
 
 <br /><br /><br /><br />
@@ -78,7 +78,7 @@ description: This blog is shared under a Creative Commons 4.0 International Lice
 <p>I reserve all rights to the Modular F Logo and all its variations as protected by copyright laws. You may not use, duplicate or modify the logo without express permission from me, unless the use, duplication and modification of the material is covered by fair use practices.</p>
 
 
-<p><a href="mailto:hello@francisborja.com?subject=Request to use the Modular F logo&body=I would like to request permission to use the Modular F logo.">Request permission &rsaquo;</a></p>
+<p><a class="pop" href="mailto:hello@francisborja.com?subject=Request to use the Modular F logo&body=I would like to request permission to use the Modular F logo.">Request permission &rsaquo;</a></p>
 
 <br />
 <br />
