Update to homepage

--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@ title: Francis Borja
 ---
 
 <h5>Hello.</h5>
-<h1>My name is Francis.<br />
-I&nbsp;write and design stuff.</h1>
-
-<hr />
-
-<h2>I built this site from scratch with&nbsp;my&nbsp;bare&nbsp;hands,
-so&nbsp;if&nbsp;it&nbsp;breaks, that&#39;s&nbsp;on&nbsp;you. &#128539;</h2>
+<h1>My name is Francis. I&nbsp;write and&nbsp;design sometimes.</h1>
 
 
 <div class="blog-index">
