Mastodon social links

--- a/index.html
+++ b/index.html
@@ -26,3 +26,4 @@ title: Francis Borja
 
 <div class="home-gap">Message me if you see this. ;)
 </div>
+<a rel="me" href="https://home.social/@francisborja"></a>
