911 Lone Star streams shortcut

--- a/_pages/911.html
+++ b/_pages/911.html
@@ -9,10 +9,10 @@ permalink: /911
       <title>911 Lone Star</title>
 
       <meta charset="UTF-8">
-      <meta http-equiv="refresh" content="0; url=https://www.fox.com/live/channel/KRIV/?id=a8d77867428c2734e5d33d6b2c7aec69">
+      <meta http-equiv="refresh" content="0; url=https://www.tumblr.com/omanderstrandreyes/711973166264827904/jddryder-reminder-than-you-can-find-live">
 
       <script type="text/javascript">
-          window.location.href = "https://www.fox.com/live/channel/KRIV/?id=a8d77867428c2734e5d33d6b2c7aec69"
+          window.location.href = "https://www.tumblr.com/omanderstrandreyes/711973166264827904/jddryder-reminder-than-you-can-find-live"
       </script>
 
     </head>
