Update to home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Francis Borja
 ---
 
 <h5>Hello.</h5>
-<h1>My name is Francis. I&nbsp;write and&nbsp;design sometimes.</h1>
+<h1>My name is Francis. I&nbsp;write and&nbsp;design stuff.</h1>
 
 
 <div class="blog-index">
